--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "deploy": "push-dir --dir=dist --branch=master --cleanup --remote=website"
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "push-dir": "^0.4.1"
   }
 }
