--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup --remote=website"
+    "deploy": "yarn build && yarn generate && push-dir --dir=dist --branch=master --cleanup --remote=website"
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
