--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
+    "@nuxtjs/pwa": "^3.0.2",
     "nuxt": "^2.14.6",
     "push-dir": "^0.4.1"
   }
