--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
-    "surge": "^0.21.6"
+    "surge": "^0.21.6",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.12"
   }
 }
