--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/pwa": "^3.0.2",
     "nuxt": "^2.14.6",
+    "sass": "^1.38.0",
     "spectre.css": "^0.5.9"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "surge": "^0.21.6",
     "vue-svg-loader": "^0.16.0",
