--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "nuxt start",
-    "deploy": "yarn build && yarn generate && surge ./dist www.sourlemon.co.za"
+    "start": "nuxt start"
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
